Fix cropped logos for smaller browser width..

--- a/theme/_sass/theme.scss
+++ b/theme/_sass/theme.scss
@@ -562,7 +562,7 @@ body.header-menu-expanded {
 
 .sponsors-ezbuy {
   background-image: url("/assets/logo-ezbuy.png");
-  background-size: 165px 48px;
+  background-size: 160px 47px;
 }
 
 .sponsors-elastic {
@@ -624,7 +624,7 @@ body.header-menu-expanded {
 
 .sponsors-yibu {
   background-image: url("/assets/logo-yibu.png");
-  background-size: 174px 48px;
+  background-size: 160px 45px;
 }
 
 .sponsors-stuq {
@@ -638,7 +638,7 @@ body.header-menu-expanded {
 
 .sponsors-osc {
   background-image: url("/assets/logo-osc.png");
-  background-size: 161px 48px;
+  background-size: 160px 48px;
 }
 
 .sponsors-juejin {
